<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondGame">

    <TextView
        android:id="@+id/tv_playerName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_letter1"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:hint="@string/Letter"
        android:onClick="addLetterToAnswer"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="#C0D5DF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_letter2"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_playerAnswer"
        app:layout_constraintVertical_bias="0.12"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_letter2"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:hint="@string/Letter"
        android:onClick="addLetterToAnswer"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="#C0D5DF"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_letter3"
        app:layout_constraintStart_toEndOf="@id/btn_letter1"
        app:layout_constraintTop_toBottomOf="@+id/tv_playerAnswer"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/btn_letter3"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:hint="@string/Letter"
        android:onClick="addLetterToAnswer"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="#C0D5DF"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_letter4"
        app:layout_constraintStart_toEndOf="@id/btn_letter2"
        app:layout_constraintTop_toBottomOf="@+id/tv_playerAnswer"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/btn_letter4"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/Letter"
        android:onClick="addLetterToAnswer"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="#C0D5DF"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_letter3"
        app:layout_constraintTop_toBottomOf="@+id/tv_playerAnswer"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TutorialGame2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_letter2"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/tv_playerAnswer"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:text="@string/AnswerSpace"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <Button
        android:id="@+id/btn_start2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backToStart"
        android:text="@string/Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_nextToGame1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_nextToGame1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nextToGame1"
        android:text="@string/Game1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_start2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_play2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="generateRandomWord"
        android:text="@string/Play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_playerName3"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkAnswer"
        android:text="@string/Check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/btn_play2"
        app:layout_constraintTop_toTopOf="@+id/btn_play2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_scoreGame2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/Score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toEndOf="@id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/tv_resultGame2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="196dp"
        android:text="@string/Result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:text="@string/Score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_resultGame2"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/Result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_resultGame2"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.094" />
</androidx.constraintlayout.widget.ConstraintLayout>